# lightrag-langchain

./: .env.example  .gitignore  404.html  CLAUDE.md  README.md  mkdocs.yml  objects.inv  pyproject.toml  skills-lock.json
.github/workflows/: deploy-mkdocs.yml  publish.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json
.planning/debug/: lazy-llm-pydantic-attribute-error.md  mix-query-table-case-mismatch.md  thinking-mode-tool-choice.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-configuration/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-VALIDATION.md
.planning/phases/02-data-layer/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-PATTERNS.md  02-RESEARCH.md  02-REVIEW.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-llm-integration/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-05-PLAN.md  03-05-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-RESEARCH.md  03-REVIEW.md  03-VERIFICATION.md
.planning/phases/04-query-strategies/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-CONTEXT.md  04-DISCUSSION-LOG.md  04-RESEARCH.md  04-VALIDATION.md  04-VERIFICATION.md
.planning/phases/05-retriever-interfaces/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-CONTEXT.md  05-DISCUSSION-LOG.md  (+2 more)
api-reference/: index.html
api-reference/chains/: index.html
api-reference/config/: index.html
api-reference/factories/: index.html
api-reference/keywords/: index.html
api-reference/reranker/: index.html
api-reference/retrievers/: index.html
api-reference/token-budget/: index.html
docs/: examples.md  index.md  quick-start.md
docs/api-reference/: chains.md  config.md  factories.md  index.md  keywords.md  reranker.md  retrievers.md  token-budget.md
examples/: README.md  bypass_query.py  bypass_retriever.py  global_query.py  global_retriever.py  hybrid_query.py  hybrid_retriever.py  local_query.py  local_retriever.py  mix_query.py  mix_retriever.py  naive_query.py  naive_retriever.py  walkthrough.ipynb
quick-start/: index.html
search/: search_index.json
site/: 404.html  index.html
site/api-reference/: index.html
site/examples/: index.html
site/quick-start/: index.html
site/search/: search_index.json
src/lightrag_langchain/: __init__.py  config.py  keywords.py  llm.py  reranker.py  token_budget.py
tests/: conftest.py  test_chain_base.py  test_chain_dispatch.py  test_chain_keywords.py  test_chain_stream.py  test_config.py  test_graph.py  test_keywords.py  test_llm.py  test_models.py  test_pool.py  test_query_strategies.py  test_reranker.py  test_retriever.py  test_store.py  test_token_budget.py
(+59 files in other folders)
