[build-system]
requires = ["hatchling>=1.8"]
build-backend = "hatchling.build"

[project]
name = "lightrag-langchain"
version = "0.1.0"
description = "LangChain-based read-only query layer for LightRAG knowledge graph"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31,<1.0",
    "httpx>=0.28,<1.0",
    "langchain-openai>=1.2,<2.0",
    "pgvector>=0.4,<1.0",
    "pydantic>=2.13,<3.0",
    "pydantic-settings>=2.14,<3.0",
    "tenacity>=9.0,<10.0",
    "tiktoken>=0.7,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "ruff>=0.15",
]

[tool.hatch.build.targets.wheel]
packages = ["src/lightrag_langchain"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[dependency-groups]
dev = [
    "mkdocs-material>=9.7.6",
    "mkdocstrings>=1.0.4",
    "mkdocstrings-python>=2.0.3",
    "pytest-asyncio>=1.4.0",
]
